# API-lacrei-saude

./: Docker-compose.yml  Dockerfile  README.md  db.sqlite3  pyproject.toml
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/management/comands/: __init__.py
api/migrations/: 0001_initial.py  0002_remove_consulta_update_at_and_more.py
core/: settings.py  urls.py
ebextensions/: django.config
github/workflows/: ci.yml
